master: some refactoring

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,5 +1,2 @@
-<p>
-  {{todo | json}}
-  <br />
-  <button (click)="onDone()">fertig</button>
-</p>
+<p>Input from app component to todo component: {{todo | json}}</p>
+<button (click)="onDone()">done</button>
