master: corrected some mistakes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
 <h3>RxJS, Observables, Two Way Binding</h3>
 <form (ngSubmit)="onSubmit()">
   <input type="text" name="title" [(ngModel)]="title"/>
-  <button>Hinzufügen</button>
+  <button>Add</button>
 </form>
 <hr />
 
